Dashboard - enter align column header. fix buttons css

--- a/src/app/modules/home/dashboard/dashboard.component.scss
+++ b/src/app/modules/home/dashboard/dashboard.component.scss
@@ -56,9 +56,9 @@
 
                 .reset-icon {
                     border-radius: 8px;
-                    height: 56px;
-                    width: 56px;
-                    font-size: 32px;
+                    height: 48px;
+                    width: 48px;
+                    font-size: 24px;
                     &.mat-button-disabled {
                         opacity: 0.4;
                     }
@@ -68,7 +68,7 @@
             .create-ride-btn {
                 width: 20%;
                 max-width: 154px;
-                height: 56px;
+                height: 48px;
                 margin-top: 4px;
                 &.mat-button-disabled {
                     opacity: 0.4;
@@ -85,7 +85,7 @@
                 color: #0a0a0a;
                 font: normal normal normal 12px/20px Open Sans;
             }
-            .mat-column-status {
+            .mat-column-status-dashboard {
                 .state-1 {
                     max-width: 130px;
                 }
@@ -105,6 +105,7 @@
             .mat-column-action {
                 min-width: 64px !important;
                 max-width: 64px !important;
+                text-align: center;
             }
         }
     }
